# wxrc

./: README.md  meson.build
example/: cube.c  fractal-frag.glsl  fractal.c  meson.build
include/: backend.h  gltf.h  img.h  input.h  mathutil.h  output.h  render.h  server.h  view.h  xr-shell-protocol.h  xr.h  xrutil.h
protocol/: meson.build  wxrc-xr-shell-unstable-v1.xml  zxr-shell-unstable-v1.xml
src/: backend.c  gltf.c  img.c  input.c  main.c  mathutil.c  render.c  view.c  xdg-shell.c  xr-shell-protocol.c  xr-shell.c  xrutil.c
